--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,12 +13,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
     background-color: blue;
 }
 .submit {
     display: block;
     margin: 0 auto;
     padding: 12px 24px;
+}
+.questions_formTwo {
+    .questions {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 200px;
+        background-color: red;
+    }
 }
