part two testing create function

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,7 @@
     margin: 0 auto;
     padding: 12px 24px;
 }
-.questions_formTwo {
+.questions__formTwo {
     .questions {
         display: flex;
         flex-direction: column;
