--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,35 +1,48 @@
+@import './custom/variables';
+@import './custom/mixins';
+@import './modules/footer';
 @import './modules/results';
+@import './modules/hero';
+@import './modules/main';
+@import './modules/questions';
+
+html {
+    height: 100%;
+}
+body {
+    font-family: 'PF Handbook Pro',sans-serif;
+}
 .container {
-    // max-width: 1400px;
+    max-width: 1440px;
     width: 100%;
-    // padding: 0 15px;
+    padding: 0;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    position: relative;
+    z-index: 2;
 }
-.questions {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: 200px;
-    background-color: blue;
-}
-.submit {
-    display: block;
-    margin: 0 auto;
-    padding: 12px 24px;
-}
-.questions__formTwo {
-    .questions {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 200px;
-        height: 200px;
-        background-color: red;
-    }
-}
+// .questions {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     width: 200px;
+//     height: auto;
+//     background-color: blue;
+// }
+// .submit {
+//     display: block;
+//     margin: 0 auto;
+//     padding: 12px 24px;
+// }
+// .questions__formTwo {
+//     .questions {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//         width: 200px;
+//         height: 200px;
+//         background-color: red;
+//     }
+// }
