--- a/src/scss/modules/_questions.scss
+++ b/src/scss/modules/_questions.scss
@@ -1,15 +1,20 @@
 .questions__form {
     max-width: 538px;
     .questions {
-        background-color: #fff;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
         gap: 48px;
+        max-width: 538px;
         .one,.two {
             padding: 40px;
-            background: red;
+            background: #fff;
             border-radius: 5px;
+            min-height: 175px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
         .question {
             font-weight: 400;
@@ -18,6 +23,7 @@
             color: $cTheme;
             text-align: center;
             margin: 0;
+            margin-bottom: 40px;
         }
         .answers {
             display: flex;
@@ -41,9 +47,81 @@
         }
     }
 }
+.slider__title {
+    color: #fff;
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 86px;
+}
+.swiper {
+    display: flex;
+    width: 100vw;
+}
+.swiper__second {
+    width: 538px;
+}
+.swiper-slide {
+    display: flex;
+}
+.swiper-pagination {
+    left: 0 !important;
+    width: 300px !important;
+    top: 50%;
+}
 .first__questions-form {
     display: none;
 }
 .none {
-    display: none;
+    display: none !important;
+}
+.block {
+    display: block !important;
+}
+.wrapper {
+    .questions__form {
+        background: #fff;
+    }
+    .questions {
+        min-height: 300px;
+        display: flex;
+        justify-content: center;
+    }
+}
+.secondButton {
+    background-color: #fff;
+    width: auto !important;
+}
+.swiper-button-next,.swiper-button-prev {
+    color: #fff !important;
+    text-transform: uppercase !important;
+    font-weight: 700 !important;
+    &::after {
+        display: none;
+    }
+}
+.swiper-button-prev {
+    left: 30px !important;
+}
+.swiper-button-next {
+    right: 20% !important;
+}
+.second-slider-next {
+    color: $cTheme !important;
+    top: 95% !important;
+    right: 4% !important;
+}
+.second-slider-prev {
+    color: $cTheme !important;
+    top: 95% !important;
+}
+.swiper-pagination-bullet {
+    width: 10px !important;
+    height: 10px !important;
+    border: 1px solid #fff;
+    opacity: 1 !important;
+    background: none !important;
+
+}
+.swiper-pagination-bullet-active {
+    background: #fff !important;
 }
