--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -1,8 +1,57 @@
+.results {
+    min-height: 575px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    &::after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(71, 169, 57, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+    &__heading {
+        font-weight: 700;
+        font-size: 10px;
+        line-height: 10px;
+        text-align: center;
+        margin: 0;
+        margin-bottom: 28px;
+        color: #fff;
+    }
+    &__title {
+        font-weight: 700;
+        font-size: 72px;
+        line-height: 86px;
+        text-align: center;
+        margin: 0;
+        margin-bottom: 24px;
+        color: #fff;
+    }
+    &__subtitle {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 27px;
+        text-align: center;
+        max-width: 650px;
+        margin: 0 auto;
+        color: #fff;
+    }
+}
 .cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20px;
     color: #1B5089;
+    transform: translateY(-110px);
     &__item {
+        background-color: #fff;
         max-width: 346px;
         width: 100%;
         padding: 60px 50px;
@@ -17,12 +66,20 @@
             margin: 0;
             margin-bottom: 40px;
             font-size: 36px;
-            line-height: 43px;
             font-weight: 700;
-            padding: 35px 25px;
-            border: 8px solid #E3EFFC;
             border-radius: 50%;
             display: inline-block;
+            position: relative;
+            .ring {
+                position: absolute;
+                width: 130px;
+                height: 130px;
+                border: 8px solid red;
+                border-radius: 50%;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%,-50%);
+            }
         }
         &-title {
             margin: 0;
