--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -1,8 +1,68 @@
+.mobile__questions {
+    display: none;
+}
+.overlay {
+    position: relative;
+    &::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        background: radial-gradient(1158.36% 765.95% at -58.18% 144.5%, rgba(48, 158, 250, 0.48) 19.61%, rgba(194, 105, 236, 0.533041) 52.47%);
+        transform: rotate(-180deg);
+        z-index: 1;
+        @media(max-width:768px) {
+            height: 800px;
+        }
+    }
+}
+.overlayMobile {
+    &::before {
+        @media(max-width:768px) {
+            height: 100%;
+        }
+    }
+}
+.featured__link {
+    font-size: 24px;
+    line-height: 22px;
+    letter-spacing: 0.095em;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: $cTheme !important;
+    border: 1.5px solid #1B5089 !important;
+    border-radius: 25.5px;
+    padding: 16px 25px;
+    display: inline-block;
+    
+}
+@media(max-width:768px) {
+    .button__wrapper {
+        display: flex;
+        .featured__link {
+            margin: 0 auto;
+        }
+        margin-bottom: 80px;
+    }
+}
+.button__link {
+    background-color: #fff;
+    margin: 0 auto;
+    display: block;
+    @media(max-width:768px) {
+        margin-bottom: 60px;
+    }
+}
+
+//START OF MAIN
 .first {
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 2;
+    
     &__inner {
         display: flex;
         align-items: center;
@@ -71,30 +131,63 @@
 
         }
     }
-}
-.overlay {
-    position: relative;
-    &::before {
-        content: '';
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        background: radial-gradient(1158.36% 765.95% at -58.18% 144.5%, rgba(48, 158, 250, 0.48) 19.61%, rgba(194, 105, 236, 0.533041) 52.47%);
-        transform: rotate(-180deg);
-        z-index: 1;
+    @media(max-width: 768px) {
+        height: auto;
+        background-size: auto;
+        object-fit: fill;
+        .secondButton {
+            margin: 0 auto;
+        }
+        &__inner {
+            flex-direction: column;
+            height: initial;
+            .left {
+                width: 100%;
+                margin-bottom: 105px;
+                margin-top: 160px;
+                .first__title {
+                    font-size: 60px;
+                    line-height: 60px;
+                    text-align: center;
+                }
+            }
+            .right{
+                width: 100%;
+                .first__info {
+                    border-radius: 0;
+                    padding: 80px 15px;
+                    background-color: #EBF5FF;
+                    .featured__link {
+                        margin: 0 auto;
+                        padding: 14px 17px;
+                    }
+                }
+            }
+        }
+        .swiper {
+            height: 1000px;
+        }
+        .swiper-slide {
+            flex-direction: column;
+            .left {
+                display: none;
+            }
+        }
+        .mobile__questions {
+            display: block;
+            .mobile__title {
+                font-size: 60px;
+                line-height: 60px;
+                text-align: center;
+                max-width: 538px;
+                width: 100%;
+                margin: 0 auto;
+                color: #fff;
+            }
+        }
     }
 }
-.featured__link {
-    font-size: 24px;
-    line-height: 22px;
-    letter-spacing: 0.095;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: $cTheme;
-    border: 1.5px solid #1B5089;
-    border-radius: 25.5px;
-    padding: 16px 25px;
-    display: inline-block;
+.lastButton {
+    align-self: center;
+    justify-content: center;
 }
