--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,16 +1,20 @@
 @import './custom/variables';
+@import './custom/fonts';
 @import './custom/mixins';
 @import './modules/footer';
 @import './modules/results';
 @import './modules/hero';
 @import './modules/main';
 @import './modules/questions';
+@import './modules/contact';
 
 html {
     height: 100%;
 }
 body {
     font-family: 'PF Handbook Pro',sans-serif;
+    color: $cTheme;
+    overflow-x: hidden;
 }
 .container {
     max-width: 1440px;
@@ -21,6 +25,9 @@ body {
     position: relative;
     z-index: 2;
 }
+a, a:visited, a:hover, a:active {
+    color: inherit;
+  }
 // .questions {
 //     display: flex;
 //     flex-direction: column;
