--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -1,5 +1,18 @@
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
+}
 .mobile__questions {
     display: none;
+}
+.centerButton {
+    height: 100vh !important;
+    display: flex !important;
+    justify-content: center !important;
 }
 .overlay {
     position: relative;
@@ -36,23 +49,38 @@
     border-radius: 25.5px;
     padding: 16px 25px;
     display: inline-block;
-    
+    cursor:pointer;
 }
 @media(max-width:768px) {
+    .firstButtonWrapper {
+        background: #fff;
+        padding-bottom: 40px;
+        .button__link {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+    }
     .button__wrapper {
         display: flex;
         .featured__link {
             margin: 0 auto;
         }
-        margin-bottom: 80px;
+        // margin-bottom: 80px;
     }
 }
 .button__link {
     background-color: #fff;
     margin: 0 auto;
     display: block;
+    margin-top: 40px;
+    @media(min-width: 769px){
+        background: none;
+        color: #fff !important;
+        border-color: #fff !important;
+    }
     @media(max-width:768px) {
         margin-bottom: 60px;
+        display: block !important;
     }
 }
 
@@ -81,6 +109,11 @@
                 width: 100%;
                 margin: 0 auto;
                 color: #fff;
+                position: relative;
+                .swiper-pagination {
+                    text-align: initial;
+                    top: 85%;
+                }
             }
         }
         .right {
@@ -149,6 +182,7 @@
                     font-size: 60px;
                     line-height: 60px;
                     text-align: center;
+                    
                 }
             }
             .right{
@@ -157,6 +191,16 @@
                     border-radius: 0;
                     padding: 80px 15px;
                     background-color: #EBF5FF;
+                    &-title {
+                        margin-left: auto;
+                        margin-right: auto;
+                        max-width: 340px;
+                    }
+                    &-list {
+                        margin-left: auto;
+                        margin-right: auto;
+                        max-width: 270px;
+                    }
                     .featured__link {
                         margin: 0 auto;
                         padding: 14px 17px;
