--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -58,6 +58,8 @@
         text-align: center;
         box-shadow: 0px 0px 25px rgba(31, 79, 151, 0.15);
         border-radius: 5px;
+        display: flex;
+        flex-direction: column;
         transition: all .3s;
         &:hover {
             transform: scale(1.05);
@@ -108,6 +110,7 @@
             border-radius: 25.5px;
             padding: 16px 25px;
             display: block;
+            margin-top: auto;
         }
     }
 }
@@ -116,7 +119,7 @@
     color: $cTheme;
     @media (max-width:768px) {
         text-align: center;
-        margin-bottom: 60px;
+        // margin-bottom: 60px;
         font-size: 20px;
     }
 }
@@ -152,6 +155,7 @@
         &__item {
             max-width: 335px;
             padding: 54px 24px;
+            
             &-result {
 
             }
