--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -63,6 +63,7 @@
     gap: 17px;
     flex-wrap: wrap;
     max-width: 190px;
+    visibility: hidden;
     img {
       max-width: 84px;
       height: auto;
