--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -28,6 +28,9 @@ input:-webkit-autofill:active {
         @media(max-width:768px) {
             height: 800px;
         }
+        @media(max-width:480px) {
+            height: auto;
+        }
     }
 }
 .overlayMobile {
