--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ a:active {
 
 /* Forms
 --------------------------------------------- */
-button,
+/* button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
@@ -587,7 +587,7 @@ input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
 	border-color: #aaa #bbb #bbb;
-}
+} */
 
 input[type="text"],
 input[type="email"],
