--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -27,11 +27,13 @@
       display: flex;
       align-items: center;
       li {
+        width: 16px;
+        height: 16px;
         & + li {
           margin-left: 25px;
         }
         a {
-          color: #fff;
+          font-size: 0;
           text-decoration: none;
           width: 16px;
           height: 16px;
