--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -151,8 +151,8 @@
 }
 .logo {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 5%;
+    top: 5%;
     width: 200px;
     height: 60px;
     z-index: 99;
