--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -1,3 +1,159 @@
+.lu-bf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(71, 169, 57, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-df {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(234,171,0, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-bvef {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(0,103,90, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-fmof {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(225,121,0, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-gzzf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(142,147,0, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-hzf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(172,41,115, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-jf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(15,32,75, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-kf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(59,0,131, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-mf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(213,43,30, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-ppmf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(164,77,196, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-szf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(0,130,202, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-tf {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(125,92,198, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
+.lu-vff {
+    position: relative;
+    &:after {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: rgba(140,144,145, 0.7);
+        left: 0;
+        z-index: 1;
+        position: absolute;
+    }
+}
 .results {
     min-height: 575px;
     display: flex;
@@ -7,15 +163,6 @@
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    &::after {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background: rgba(71, 169, 57, 0.7);
-        left: 0;
-        z-index: 1;
-        position: absolute;
-    }
     &__heading {
         font-weight: 700;
         font-size: 10px;
@@ -74,13 +221,13 @@
             position: relative;
             .ring {
                 position: absolute;
-                width: 130px;
-                height: 130px;
-                border: 8px solid #7FD1A5;
-                border-radius: 50%;
+                // width: 130px;
+                // height: 130px;
+                // border: 8px solid #7FD1A5;
+                // border-radius: 50%;
                 left: 50%;
                 top: 50%;
-                transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%) rotate(-90deg);
             }
         }
         &-title {
