--- a/src/scss/custom/_fonts.scss
+++ b/src/scss/custom/_fonts.scss
@@ -7,6 +7,7 @@
   font-weight: normal;
   font-style: normal;
   font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: 'PF Handbook Pro';
@@ -14,6 +15,7 @@
   url('../files/fonts/PFHandbookPro-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-lu-"], [class*=" icon-lu-"] {
@@ -240,6 +242,17 @@
 }
 .icon-lu-social-new-fb {
   background-image: url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.2812 11.2539L10.8544 7.6296H7.27875V5.28134C7.24727 5.01007 7.28056 4.73539 7.37602 4.47872C7.47149 4.22204 7.62656 3.99031 7.82911 3.80161C8.03167 3.61291 8.27625 3.47235 8.54377 3.39086C8.8113 3.30937 9.09453 3.28918 9.37139 3.33185H11V0.248116C10.0462 0.0961639 9.08217 0.0132323 8.1158 0C5.1861 0 3.26633 1.77226 3.26633 4.87373V7.6296H0V11.2539H3.26633V20H7.27875V11.2539H10.2812Z' fill='white'/%3E%3C/svg%3E%0A");
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  &:hover {
+
+  }
+}
+.icon-lu-social-new-tiktok {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.0' width='160.000000pt' height='160.000000pt' viewBox='0 0 160.000000 160.000000' preserveAspectRatio='xMidYMid meet'%3E%3Cg transform='translate(0.000000,160.000000) scale(0.100000,-0.100000)' fill='%23ffffff' stroke='none'%3E%3Cpath d='M185 1577 c-76 -30 -118 -68 -161 -147 -18 -33 -19 -64 -19 -630 l0 -595 24 -45 c32 -61 67 -97 126 -128 l50 -27 590 0 c658 0 622 -4 705 71 23 21 51 56 63 78 22 41 22 47 25 625 3 644 3 638 -59 714 -17 20 -52 49 -77 65 l-47 27 -595 2 c-440 1 -603 -1 -625 -10z m1177 -87 c21 -6 51 -22 68 -37 62 -52 60 -28 60 -654 l0 -572 -25 -43 c-16 -28 -39 -49 -68 -63 -42 -21 -55 -21 -600 -21 -451 0 -564 3 -590 14 -39 16 -82 61 -96 99 -7 19 -11 217 -11 588 0 538 1 561 20 599 22 43 67 79 114 90 49 12 1085 12 1128 0z'/%3E%3Cpath d='M827 1343 c-4 -3 -7 -184 -7 -400 0 -422 0 -422 -52 -470 -44 -41 -136 -46 -191 -10 -55 36 -74 143 -37 204 27 44 65 67 124 73 l51 5 3 99 3 98 -78 -4 c-130 -6 -223 -71 -281 -196 -23 -49 -27 -70 -27 -152 0 -84 3 -102 28 -152 35 -71 110 -140 183 -167 67 -26 180 -28 247 -5 63 21 137 90 169 156 38 76 48 155 48 366 0 101 3 182 8 180 95 -48 147 -68 190 -74 l52 -7 0 91 c0 86 -1 91 -22 97 -84 22 -107 34 -148 75 -45 45 -80 121 -80 176 0 23 -2 24 -88 24 -49 0 -92 -3 -95 -7z'/%3E%3C/g%3E%3C/svg%3E");
   width: 20px;
   height: 20px;
   background-repeat: no-repeat;
