--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -25,7 +25,7 @@ input:-webkit-autofill:active {
         background: radial-gradient(1158.36% 765.95% at -58.18% 144.5%, rgba(48, 158, 250, 0.48) 19.61%, rgba(194, 105, 236, 0.533041) 52.47%);
         transform: rotate(-180deg);
         z-index: 1;
-        @media(max-width:768px) {
+        @media(max-width:820px) {
             height: 800px;
         }
         @media(max-width:480px) {
@@ -35,7 +35,7 @@ input:-webkit-autofill:active {
 }
 .overlayMobile {
     &::before {
-        @media(max-width:768px) {
+        @media(max-width:820px) {
             height: 100%;
         }
     }
@@ -50,15 +50,15 @@ input:-webkit-autofill:active {
     color: $cTheme !important;
     border: 1.5px solid #1B5089 !important;
     border-radius: 25.5px;
-    padding: 16px 25px;
+    padding: 16px 25px 13px 25px;
     display: inline-block;
     cursor:pointer;
 }
-@media(max-width:768px) {
+@media(max-width:820px) {
     .firstButtonWrapper {
         background: #fff;
         padding-bottom: 40px;
-        @media (max-width: 768px) {
+        @media (max-width: 820px) {
             padding-bottom: 0;
         }
         .button__link {
@@ -77,7 +77,7 @@ input:-webkit-autofill:active {
     }
     .mobileOverlay {
         position: relative;
-        padding-bottom: 80px !important;
+        // padding-bottom: 80px !important;
         &::after {
             content: '';
             width: 100%;
@@ -94,12 +94,12 @@ input:-webkit-autofill:active {
     margin: 0 auto;
     display: block;
     margin-top: 40px;
-    @media(min-width: 769px){
+    @media(min-width: 821px){
         background: none;
         color: #fff !important;
         border-color: #fff !important;
     }
-    @media(max-width:768px) {
+    @media(max-width:820px) {
         margin-bottom: 60px;
         display: block !important;
     }
@@ -146,7 +146,7 @@ input:-webkit-autofill:active {
                 &-title {
                     color: $cTheme;
                     font-weight: 700;
-                    font-size: 18px;
+                    font-size: 24px;
                     line-height: 27px;
                     margin-bottom: 24px;
                 }
@@ -155,7 +155,9 @@ input:-webkit-autofill:active {
                     margin-bottom: 50px;
                     padding-left: 36px;
                     position: relative;
-    
+                    li {
+                        font-size: 20px;
+                    }
                     li + li {
                         margin-top: 24px;
                     }
@@ -185,7 +187,7 @@ input:-webkit-autofill:active {
 
         }
     }
-    @media(max-width: 768px) {
+    @media(max-width: 820px) {
         height: auto;
         background-size: auto;
         object-fit: fill;
@@ -197,8 +199,9 @@ input:-webkit-autofill:active {
             height: initial;
             .left {
                 width: 100%;
-                margin-bottom: 105px;
-                margin-top: 160px;
+                // margin-bottom: 320px;
+                // margin-top: 160px;
+                height: 100vh;
                 .first__title {
                     font-size: 60px;
                     line-height: 60px;
