--- a/src/scss/modules/_questions.scss
+++ b/src/scss/modules/_questions.scss
@@ -1,7 +1,17 @@
 .questions__form {
     max-width: 538px;
-    @media (max-width: 768px){
+    @media (max-width: 820px){
         margin: 0 auto;
+        position: relative;
+        align-items: center;
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100vw;
+            height: 100%;
+            background-color: #ebf5ff;
+            z-index: -1;
+        }
     }
     .questions {
         border-radius: 5px;
@@ -10,6 +20,9 @@
         gap: 48px;
         max-width: 538px;
         width: 100%;
+        @media(max-width:820px){
+            transform: translateY(-25%);
+        }
         .one,.two {
             padding: 40px;
             background: #fff;
@@ -19,6 +32,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            @media(max-width:820px){
+                min-height: 260px;
+                padding: 15px;
+            }
         }
         .question {
             font-weight: 400;
@@ -50,13 +67,15 @@
                 }
             }
         }
-        @media(max-width: 768px) {
+        @media(max-width: 820px) {
             gap: 18px;
             .one,.two {
                 border-radius: 0;
             }
         }
+
     }
+
 }
 .slider__title {
     color: #fff;
@@ -83,7 +102,7 @@
 }
 .first__questions-form {
     display: none;
-    @media(max-width:768px) {
+    @media(max-width:820px) {
         & .questions {
             margin-bottom: 18px;
         }
@@ -105,7 +124,7 @@
     line-height: 28px;
     margin-bottom: 16px;
 }
-@media(min-width:769px){
+@media(min-width:821px){
     .mobilePagination {
         display: none;
     }
@@ -113,11 +132,15 @@
 .wrapper {
     .questions__form {
         background: #fff;
-        @media(max-width: 768px) {
+        @media(max-width: 820px) {
             background: none;
             display: flex;
             flex-direction: column;
-            gap: 18px;
+            // gap: 18px;
+            .questions {
+                margin-bottom: 18px;
+                min-height: 260px;
+            }
         }
     }
     .swiper {
@@ -132,7 +155,7 @@
         span {
             font-size: 48px;
             line-height: 57px;
-            @media(max-width: 768px) {
+            @media(max-width: 820px) {
                 font-size: 24px;
                 line-height: 28px;
             }
@@ -147,10 +170,11 @@
         .question {
             padding: 0 10px;
         }
-        @media(max-width:768px) {
+        @media(max-width:820px) {
             background-color: #fff;
-            display: block;
+            // display: block;
             min-height: unset;
+            transform: translateY(-50%);
             .question {
                 margin-bottom: 24px;
             }
@@ -168,7 +192,7 @@
     background-color: #fff;
     margin-top: 40px;
     width: auto !important;
-    @media(max-width: 768px) {
+    @media(max-width: 820px) {
         margin-bottom: 60px !important;
         margin-top: 40px !important;
     }
