--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -1,5 +1,6 @@
 .lu-bf {
     position: relative;
+    stroke:rgba(71, 169, 57, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -12,6 +13,7 @@
 }
 .lu-df {
     position: relative;
+    stroke: rgba(234,171,0, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -24,6 +26,7 @@
 }
 .lu-bvef {
     position: relative;
+    stroke: rgba(0,103,90, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -36,6 +39,7 @@
 }
 .lu-fmof {
     position: relative;
+    stroke: rgba(225,121,0, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -48,6 +52,7 @@
 }
 .lu-gzzf {
     position: relative;
+    stroke: rgba(142,147,0, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -60,6 +65,7 @@
 }
 .lu-hzf {
     position: relative;
+    stroke: rgba(172,41,115, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -72,6 +78,7 @@
 }
 .lu-jf {
     position: relative;
+    stroke: rgba(15,32,75, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -84,6 +91,7 @@
 }
 .lu-kf {
     position: relative;
+    stroke: rgba(59,0,131, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -96,6 +104,7 @@
 }
 .lu-mf {
     position: relative;
+    stroke: rgba(213,43,30, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -108,6 +117,7 @@
 }
 .lu-ppmf {
     position: relative;
+    stroke: rgba(164,77,196, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -120,6 +130,7 @@
 }
 .lu-szf {
     position: relative;
+    stroke: rgba(0,130,202, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -132,6 +143,7 @@
 }
 .lu-tf {
     position: relative;
+    stroke: rgba(125,92,198, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -144,6 +156,7 @@
 }
 .lu-vff {
     position: relative;
+    stroke: rgba(140,144,145, 0.7);
     &:after {
         content: '';
         width: 100%;
@@ -163,10 +176,11 @@
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 50px;
     &__heading {
         font-weight: 700;
-        font-size: 10px;
-        line-height: 10px;
+        font-size: 24px;
+        line-height: 36px;
         text-align: center;
         margin: 0;
         margin-bottom: 28px;
@@ -264,7 +278,7 @@
 .resultsButton {
     background-color: #fff;
     color: $cTheme;
-    @media (max-width:768px) {
+    @media (max-width:820px) {
         text-align: center;
         // margin-bottom: 60px;
         font-size: 20px;
@@ -274,7 +288,7 @@
     background: red !important;
     color: #fff;
 }
-@media(max-width: 768px) {
+@media(max-width: 820px) {
     .results {
         &__heading {
             font-size: 24px;
