--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,26 @@ a, a:visited, a:hover, a:active {
           color: #2C7CBF !important;
       }
   }
+  span.wpcf7-list-item.first {
+      height: unset;
+  }
+  .none {
+      display: none;
+  }
+  .left {
+      position: relative;
+      .back__button {
+        position: absolute;
+        left: 100px;
+        bottom: 20%;
+        font-weight: 900;
+        font-size: 24px;
+        line-height: 28px;
+        text-decoration: none;
+        display: none;
+    }
+  }
+
 // .questions {
 //     display: flex;
 //     flex-direction: column;
