--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,16 +57,51 @@ a, a:visited, a:hover, a:active {
       position: relative;
       .back__button {
         position: absolute;
-        left: 100px;
-        bottom: 20%;
+        left: 115px;
+        bottom: 160px;
         font-weight: 900;
         font-size: 24px;
         line-height: 28px;
         text-decoration: none;
-        display: none;
+        text-transform: uppercase;
+        color: #fff;
+        display: inline-block;
+        // top: 120%;
+        // left: 25px;
+        // display: none;
+        @media(max-width:1366px) {
+            bottom: 40px;
+            left: 100px;
+        }
     }
   }
-
+  .arrow {
+    border: solid #fff;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 5px;
+    left: -20px;
+    top: 50%;
+    transform: translateY(-50%) rotate(135deg);
+    position: absolute;
+  }
+@media (max-width: 768px){
+    .one,
+    .two {
+        position: relative;
+    }
+    .refresh__button,
+    .refresh__button-second {
+            position: absolute;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Capa_1' x='0px' y='0px' viewBox='0 0 326.034 326.034' style='enable-background:new 0 0 326.034 326.034;' xml:space='preserve'%3E%3Cg%3E%3Cpath fill='%231b5089' d='M305,156.302c-3.333,0-20-29-20-23.25v94.933c0,5.363-4.289,10.032-9.749,10.032H81v-17.13 c0-6.838-4.658-10.416-9.259-10.416c-2.055,0-4.213,0.667-6.238,1.929L6.156,249.337c-3.518,2.191-5.535,5.484-5.535,9.036 c0,3.53,1.998,6.799,5.484,8.971l59.396,36.934c2.026,1.263,4.184,1.93,6.239,1.93c4.602,0,9.259-3.578,9.259-10.416v-17.775 h194.251c27.707,0,49.749-22.424,49.749-50.032v-94.933C325,127.052,307.833,156.302,305,156.302z'/%3E%3Cpath fill='%231b5089' d='M20,169.731c3.333,0,20,29,20,23.25V98.049c0-5.363,5.788-10.032,11.247-10.032H246v17.13 c0,7.156,4.698,10.416,9.064,10.416c2.048,0,4.128-0.649,6.185-1.93l59.282-36.936c3.497-2.178,5.503-5.458,5.503-8.997 c0-3.543-2.009-6.826-5.511-9.008l-59.275-36.937c-2.056-1.28-4.136-1.93-6.184-1.93c-4.366,0-9.064,3.259-9.064,10.416v17.775 H51.247C23.54,48.017,0,70.441,0,98.049v94.933C0,198.981,17.167,169.731,20,169.731z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E");
+            width: 12px;
+            height: 12px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            right: 15px;
+            top: 15px;
+    }
+}
 // .questions {
 //     display: flex;
 //     flex-direction: column;
