--- a/src/scss/modules/_contact.scss
+++ b/src/scss/modules/_contact.scss
@@ -1,3 +1,11 @@
+span.wpcf7-form-control-wrap .wpcf7-form-control {
+    margin: 0;
+    padding: 0;
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+    outline: none !important;
+}
 .overlay-purple {
     position: relative;
     &::before {
@@ -46,7 +54,7 @@
             }
             &-mail {
                 font-weight: 700;
-                font-size: 16px;
+                font-size: 18px;
                 line-height: 24px;
                 a {
                     text-decoration: underline;
@@ -116,12 +124,18 @@
             gap: 56px;
             padding: 0 20px;
             margin-bottom: 100px;
-            margin-top: 100px;
+            margin-top: 180px;
             .contact__form {
                 button {
                     align-self: center;
                 }
             }
+        }
+        .featured__link {
+            margin-bottom: 5px !important;
+        }
+        .contact__form  {
+            padding: 0 5px !important;
         }
     }
     @media(max-width: 480px) {
@@ -168,3 +182,4 @@
         margin-right: auto;
     }
 }
+
