--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -197,7 +197,7 @@
     }
     &__subtitle {
         font-weight: 700;
-        font-size: 18px;
+        font-size: 20px;
         line-height: 27px;
         text-align: center;
         max-width: 650px;
@@ -290,10 +290,12 @@
 }
 @media(max-width: 820px) {
     .results {
+        padding: 80px 15px;
         &__heading {
             font-size: 24px;
             line-height: 28px;
             margin-bottom: 12px;
+            margin-top: 60px;
         }
         &__title {
             font-size: 64px;
