--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,6 +59,9 @@ a, a:visited, a:hover, a:active {
         position: absolute;
         left: 115px;
         bottom: 160px;
+        @media (max-width: 1440px) {
+            bottom: 80px;
+        }
         font-weight: 900;
         font-size: 24px;
         line-height: 28px;
