--- a/src/scss/modules/_questions.scss
+++ b/src/scss/modules/_questions.scss
@@ -50,8 +50,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
             label {
+                &:first-of-type{
+                    margin-right: 20px;
+                }
                 cursor: pointer;
                 color: $cTheme;
                 font-weight: 700;
