--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -47,8 +47,8 @@ input:-webkit-autofill:active {
     font-weight: 900;
     text-transform: uppercase;
     text-decoration: none;
-    color: $cTheme !important;
-    border: 1.5px solid #1B5089 !important;
+    color: $cTheme;
+    border: 1.5px solid #1B5089;
     border-radius: 25.5px;
     padding: 16px 25px 13px 25px;
     display: inline-block;
