--- a/src/scss/modules/_questions.scss
+++ b/src/scss/modules/_questions.scss
@@ -116,10 +116,10 @@
 .block {
     display: block !important;
 }
-.flex-column-reverse {
-    display: flex !important;
-    flex-direction: column-reverse;
-}
+// .flex-column-reverse {
+//     display: flex !important;
+//     flex-direction: column-reverse;
+// }
 .mobilePagination {
     font-weight: 700;
     font-size: 24px;
