--- a/src/scss/modules/_contact.scss
+++ b/src/scss/modules/_contact.scss
@@ -47,13 +47,13 @@ span.wpcf7-form-control-wrap .wpcf7-form-control {
             }
             &-text {
                 font-weight: 400;
-                font-size: 18px;
+                font-size: 20px;
                 line-height: 26px;
                 margin-bottom: 24px;
 
             }
             &-mail {
-                font-weight: 700;
+                font-weight: 400;
                 font-size: 18px;
                 line-height: 24px;
                 a {
@@ -61,7 +61,9 @@ span.wpcf7-form-control-wrap .wpcf7-form-control {
                     color: #fff !important;
                 }
             }
-
+            @media(max-width: 480px) {
+                padding: 0 20px;
+            }
         }
         .wpcf7 {
             max-width: 427px;
@@ -105,6 +107,9 @@ span.wpcf7-form-control-wrap .wpcf7-form-control {
                     font-size: inherit;
                 }
             }
+            input::placeholder {
+                opacity: 0.7 !important;
+            }
             .checkbox__wrapper {
                 margin-top: 16px;
                 margin-bottom: 50px;
@@ -118,7 +123,7 @@ span.wpcf7-form-control-wrap .wpcf7-form-control {
             
         }
     }
-    @media(max-width: 820px) {
+    @media(max-width: 834px) {
         &__inner {
             flex-direction: column;
             gap: 56px;
@@ -177,7 +182,7 @@ span.wpcf7-form-control-wrap .wpcf7-form-control {
     max-width: 250px;
     width: 100%;
     text-align: center;
-    @media(max-width:820px) {
+    @media(max-width:834px) {
         margin-left: auto;
         margin-right: auto;
     }
