--- a/src/scss/custom/_fonts.scss
+++ b/src/scss/custom/_fonts.scss
@@ -17,6 +17,16 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'PF Handbook Pro';
+  src: url('../files/fonts/PFHandbookPro-Regular.woff2') format('woff2'),
+      url('../files/fonts/PFHandbookPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 [class^="icon-lu-"], [class*=" icon-lu-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
