--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -9,7 +9,7 @@
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
-            @media(max-width:820px){
+            @media(max-width:834px){
                 height: 50%;
                 width: 100%;
                 top: 0px;
@@ -32,7 +32,7 @@
             position: absolute;
             right: 0px;
             height: 100%;
-            @media(max-width:820px){
+            @media(max-width:834px){
                 height: 50%;
                 width: 100%;
                 bottom: 0px;
@@ -43,7 +43,7 @@
         align-items: center;
         height: 100%;
         gap: 114px;
-        @media (max-width:820px) {
+        @media (max-width:834px) {
             gap: 0;
         }
         .left {
@@ -126,7 +126,7 @@
             }
         }
     }
-    @media(max-width:820px) {
+    @media(max-width:834px) {
         height: 100%;
         &__inner {
             flex-direction: column;
@@ -157,7 +157,7 @@
 .logo {
     position: absolute;
     left: 5%;
-    top: 5%;
+    top: 21px;
     width: 200px;
     height: 60px;
     z-index: 99;
