--- a/src/scss/modules/_main.scss
+++ b/src/scss/modules/_main.scss
@@ -14,6 +14,9 @@ input:-webkit-autofill:active {
     display: flex !important;
     justify-content: center !important;
 }
+body {
+    background-color: #ebf5ff;
+}
 .overlay {
     position: relative;
     &::before {
@@ -25,7 +28,7 @@ input:-webkit-autofill:active {
         background: radial-gradient(1158.36% 765.95% at -58.18% 144.5%, rgba(48, 158, 250, 0.48) 19.61%, rgba(194, 105, 236, 0.533041) 52.47%);
         transform: rotate(-180deg);
         z-index: 1;
-        @media(max-width:820px) {
+        @media(max-width:834px) {
             height: 800px;
         }
         @media(max-width:480px) {
@@ -35,7 +38,7 @@ input:-webkit-autofill:active {
 }
 .overlayMobile {
     &::before {
-        @media(max-width:820px) {
+        @media(max-width:834px) {
             height: 100%;
         }
     }
@@ -54,11 +57,11 @@ input:-webkit-autofill:active {
     display: inline-block;
     cursor:pointer;
 }
-@media(max-width:820px) {
+@media(max-width:834px) {
     .firstButtonWrapper {
         background: #fff;
         padding-bottom: 40px;
-        @media (max-width: 820px) {
+        @media (max-width: 834px) {
             padding-bottom: 0;
         }
         .button__link {
@@ -94,12 +97,12 @@ input:-webkit-autofill:active {
     margin: 0 auto;
     display: block;
     margin-top: 40px;
-    @media(min-width: 821px){
+    @media(min-width: 835px){
         background: none;
         color: #fff !important;
         border-color: #fff !important;
     }
-    @media(max-width:820px) {
+    @media(max-width:834px) {
         margin-bottom: 60px;
         display: block !important;
     }
@@ -187,7 +190,7 @@ input:-webkit-autofill:active {
 
         }
     }
-    @media(max-width: 820px) {
+    @media(max-width: 834px) {
         height: auto;
         background-size: auto;
         object-fit: fill;
