--- a/src/scss/modules/_results.scss
+++ b/src/scss/modules/_results.scss
@@ -4,11 +4,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(71, 169, 57, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-df {
@@ -17,11 +20,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(234,171,0, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-bvef {
@@ -30,11 +36,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(0,103,90, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-fmof {
@@ -43,11 +52,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(225,121,0, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-gzzf {
@@ -56,11 +68,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(142,147,0, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-hzf {
@@ -69,11 +84,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(172,41,115, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-jf {
@@ -82,11 +100,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(15,32,75, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-kf {
@@ -95,11 +116,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(59,0,131, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-mf {
@@ -108,11 +132,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(213,43,30, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-ppmf {
@@ -121,11 +148,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(164,77,196, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-szf {
@@ -134,11 +164,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(0,130,202, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-tf {
@@ -147,11 +180,14 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(125,92,198, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .lu-vff {
@@ -160,15 +196,19 @@
     &:after {
         content: '';
         width: 100%;
-        height: 100%;
+        height: calc(100% + 100px);
         background: rgba(140,144,145, 0.7);
         left: 0;
         z-index: 1;
         position: absolute;
+        @media(max-width: 834px){
+            height: 100%;
+        }
     }
 }
 .results {
     min-height: 575px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -188,24 +228,36 @@
     }
     &__title {
         font-weight: 700;
-        font-size: 72px;
-        line-height: 86px;
+        // font-size: 72px;
+        font-size: 50px;
+        line-height: 1;
         text-align: center;
         margin: 0;
-        margin-bottom: 24px;
+        // margin-bottom: 24px;
         color: #fff;
         max-width: 950px;
         margin: 0 auto;
+        margin-top: 85px;
     }
     &__subtitle {
-        font-weight: 700;
-        font-size: 20px;
+        font-weight: 400;
+        font-size: 22px;
         line-height: 27px;
         text-align: center;
-        max-width: 650px;
+        // max-width: 650px;
+        max-width: 995px;
+        padding: 0 15px;
         margin: 0 auto;
         color: #fff;
-        margin-bottom: 75px;
+        margin-bottom: 40px;
+        margin-top: 40px;
+
+        p:first-of-type {
+            margin-top: 0;
+        }
+        p:last-of-type {
+            margin-bottom: 0;
+        }
     }
 }
 .results-contact {
@@ -213,7 +265,8 @@
     border-color: #fff !important;
     text-align: center;
     margin: 0 auto;
-    max-width: 200px;
+    // max-width: 200px;
+    max-width: 400px;
     display: flex !important;
     justify-content: center;
 }
@@ -228,7 +281,7 @@
         background-color: #fff;
         max-width: 427px;
         width: 100%;
-        padding: 60px 50px;
+        padding: 35px;
         text-align: center;
         box-shadow: 0px 0px 25px rgba(31, 79, 151, 0.15);
         border-radius: 5px;
@@ -240,7 +293,8 @@
         }
         &-result {
             margin: 0;
-            margin-bottom: 40px;
+            margin-top: 25px;
+            margin-bottom: 25px;
             font-size: 36px;
             font-weight: 700;
             border-radius: 50%;
@@ -260,17 +314,26 @@
         &-title {
             margin: 0;
             font-weight: 700;
-            font-size: 36px;
-            line-height: 43px;
+            // font-size: 36px;
+            font-size: 26px;
+            line-height: 26px;
+            margin-top: 35px;
         }
         &-text {
             max-width: 347px;
             width: 100%;
-            font-size: 18px;
+            font-size: 20px;
             line-height: 27px;
             margin: 0;
-            margin-top: 45px;
-            margin-bottom: 65px;
+            // margin-top: 45px;
+            margin-top: 30px;
+            margin-bottom: 35px;
+            p:first-of-type {
+                margin-top: 0;
+            }
+            p:last-of-type {
+                margin-bottom: 0;
+            }
         }
         &-button {
             color: #1B5089;
@@ -291,7 +354,7 @@
 .resultsButton {
     background-color: #fff;
     color: $cTheme;
-    @media (max-width:820px) {
+    @media (max-width:834px) {
         text-align: center;
         // margin-bottom: 60px;
         font-size: 20px;
@@ -301,7 +364,7 @@
     background: red !important;
     color: #fff;
 }
-@media(max-width: 820px) {
+@media(max-width: 834px) {
     .results {
         padding: 80px 15px;
         &__heading {
@@ -312,15 +375,15 @@
         }
         &__title {
             font-size: 34px;
-            line-height: 44px;
+            // line-height: 44px;
             font-weight: 700;
-            margin-bottom: 15px;
+            // margin-bottom: 15px;
         }
         &__subtitle {
             font-size: 16px;
             line-height: 24px;
-            font-weight: 700;
-            margin-bottom: 74px;
+            font-weight: 400;
+            // margin-bottom: 74px;
 
         }
     }
